--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         }
 
         html {
-            -ms-overflow-style: -ms-autohiding-scrollbar !important;
-            /* MS Edge and IE scrollbar hide */
+            -ms-overflow-style: -ms-autohiding-scrollbar;
         }
 
         *,
