button styling fix

--- a/index.html
+++ b/index.html
@@ -403,6 +403,8 @@
         button {
             width: auto;
             max-width: 200px;
+            margin: 0;
+            border: 0;
             color: #fff;
             background-color: #000;
             padding: 0.8em 1em;
@@ -413,6 +415,7 @@
             -webkit-animation: fadeup 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.5s 1 normal both running;
             animation: fadeup 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.5s 1 normal both running;
             cursor: pointer;
+            box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.39);
         }
     </style>
 </head>
