--- a/index.html
+++ b/index.html
@@ -417,6 +417,11 @@
             cursor: pointer;
             box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.39);
         }
+
+        button:hover {
+            background: #111;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.39);
+        }
     </style>
 </head>
 
