--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
             flex-direction: column;
             place-content: center;
             place-items: center;
+            z-index: 10;
         }
 
         .message h1 {
@@ -413,8 +414,8 @@
             border-radius: 5px;
             text-transform: uppercase;
             -webkit-animation: fadeup 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.5s 1 normal both running;
-            animation: fadeup 100ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.5s 1 normal both running;
-            transition: background 0.2s cubic-bezier(0.39, 0.575, 0.565, 1),color 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), box-shadow 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+            animation: fadeup 200ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.5s 1 normal both running;
+            transition: background 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), color 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), box-shadow 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
             cursor: pointer;
             box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.39);
         }
