--- a/index.html
+++ b/index.html
@@ -351,6 +351,16 @@
             }
         }
 
+                @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
         .messageText {
             -webkit-animation: fadeup 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
             animation: fadeup 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
@@ -384,6 +394,7 @@
         .message h1 {
             margin: auto;
             line-height: 1.2;
+            animation: fadeIn 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
         }
 
         .buttonWrapper {
