--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             margin: 0;
             border: 0;
             color: #fff;
-            background-color: #000;
+            background-color: rgba(0, 0, 0, 0.87);
             padding: 0.8em 1em;
             font-size: 1em;
             font-weight: bold;
@@ -432,7 +432,7 @@
         }
 
         button:hover {
-            background: #333;
+            background: rgba(0, 0, 0, 0.67);;
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.39);
         }
     </style>
