--- a/index.html
+++ b/index.html
@@ -362,7 +362,8 @@
         }
 
         .messageText {
-            -webkit-animation: fadeup 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
+            -webkit-animation: fadeIn 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
+            animation: fadeIn 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
             text-align: left;
             font-weight: bold;
             font-size: 5rem;
@@ -393,8 +394,6 @@
         .message h1 {
             margin: auto;
             line-height: 1.2;
-            -webkit-animation: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
-            animation: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
         }
 
         .buttonWrapper {
