--- a/index.html
+++ b/index.html
@@ -351,7 +351,17 @@
             }
         }
 
-                @keyframes fadeIn {
+        @-webkit-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeIn {
             0% {
                 opacity: 0;
             }
@@ -425,13 +435,21 @@
             text-transform: uppercase;
             -webkit-animation: fadeup 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.5s 1 normal both running;
             animation: fadeup 200ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.5s 1 normal both running;
+            -webkit-transition: background 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), color 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), -webkit-box-shadow 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+            transition: background 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), color 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), -webkit-box-shadow 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+            -o-transition: background 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), color 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), box-shadow 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
             transition: background 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), color 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), box-shadow 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+            transition: background 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), color 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), box-shadow 0.2s cubic-bezier(0.39, 0.575, 0.565, 1), -webkit-box-shadow 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
             cursor: pointer;
+            -webkit-box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.39);
             box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.39);
         }
 
         button:hover {
-            background: rgba(0, 0, 0, 0.67);;
+            background: rgba(0, 0, 0, 0.67);
+            ;
+            -webkit-box-shadow: 0 6px 20px rgba(0, 0, 0, 0.39);
+            ;
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.39);
         }
     </style>
