--- a/index.html
+++ b/index.html
@@ -424,6 +424,8 @@
         button {
             width: auto;
             max-width: 200px;
+            letter-spacing: .007px;
+            white-space: nowrap;
             margin: 0;
             border: 0;
             color: #fff;
@@ -446,9 +448,9 @@
         }
 
         button:hover {
-            background: rgba(0, 0, 0, 0.67);
+            background: rgba(0, 0, 0, 0.70);
             ;
-            -webkit-box-shadow: 0 6px 20px rgba(0, 0, 0, 0.39);
+            -webkit-box-shadow: 0 6px 20px rgba(0, 0, 0, 0.49);
             ;
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.39);
         }
