button style changes

--- a/index.html
+++ b/index.html
@@ -422,8 +422,7 @@
         }
 
         button {
-            width: auto;
-            max-width: 200px;
+            padding: 1em 1.6em;
             letter-spacing: .007px;
             white-space: nowrap;
             margin: 0;
