--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             -webkit-animation: fadeIn 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
             animation: fadeIn 300ms cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s 1 normal both running;
             text-align: left;
-            font-weight: bold;
+            font-weight: 800;
             font-size: 5rem;
             color: rgba(0, 0, 0, 0.87);
             margin-bottom: 1em;
